objects/LAT_DetalheCotaMarket__c.object
<CustomObject>
    <fields>
        <fullName>DatesFormula__c</fullName>
        <formula>TEXT(DAY(startDate__c))  + &apos;-&apos; +  TEXT(MONTH(startDate__c)) + &apos;-&apos; + TEXT(YEAR(startDate__c)) + &apos; / &apos; + TEXT(DAY(endDate__c))  + &apos;-&apos; +  TEXT(MONTH(endDate__c)) + &apos;-&apos; + TEXT(YEAR(endDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Início-Data fim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bandeira__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bandeira</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.Internal_Id__c</field>
                <operation>contains</operation>
                <value>01-06</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Detalhes Cota New to Market (Bandeira)</relationshipLabel>
        <relationshipName>Detalhes_Cota_New_to_Market1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cantidadDisponible__c</fullName>
        <formula>cota__c - consumo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cantidadDisponible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Detalhes_Cota_New_to_Market</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>consumo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consumo</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cotaMarket__c</fullName>
        <label>Número Detalhe</label>
        <referenceTo>LAT_CotaMarket__c</referenceTo>
        <relationshipLabel>Detalhes Cota New to Market</relationshipLabel>
        <relationshipName>Detalhes_Cota</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cota__c</fullName>
        <label>Cota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dateConsumida__c</fullName>
        <label>dateConsumida</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>Data Fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>executivo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executivo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Detalhes_Cota_New_to_Market</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>prioridad__c</fullName>
        <label>Prioridad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.Internal_Id__c</field>
                <operation>contains</operation>
                <value>01-01</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Detalhes Cota New to Market (Regional)</relationshipLabel>
        <relationshipName>Detalhes_Cota_New_to_Market2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>segmento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segmento</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.Internal_Id__c</field>
                <operation>contains</operation>
                <value>01-03</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Detalhes Cota New to Market (Segmento)</relationshipLabel>
        <relationshipName>Detalhes_Cota_New_to_Market3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>Data Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sub_canal__c</fullName>
        <label>Sub-canal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atacadista</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>Canais Alternativos</fullName>
                </value>
                <value>
                    <fullName>Delicatessen</fullName>
                </value>
                <value>
                    <fullName>Distribuidor</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Night club</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Varejo Regional</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Specialized Retail</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Atacados</fullName>
                </value>
                <value>
                    <fullName>Bar Agitado</fullName>
                </value>
                <value>
                    <fullName>Table Dance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Detalhe Cota New to Market</label>
    <listViews>
        <fullName>Vigentes</fullName>
        <columns>NAME</columns>
        <columns>cotaMarket__c</columns>
        <columns>cota__c</columns>
        <columns>cantidadDisponible__c</columns>
        <columns>regional__c</columns>
        <columns>segmento__c</columns>
        <columns>startDate__c</columns>
        <columns>endDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>endDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Proximas e Vigentes</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
            <group>LAT_CRM_IT_Users</group>
            <group>LAT_Sol_Integration</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalhes Cota New to Market</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>COTA_DETALHE_VR01_ValidateStart</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(startDate__c) &amp;&amp; Today() &gt;= PRIORVALUE(startDate__c))</errorConditionFormula>
        <errorDisplayField>startDate__c</errorDisplayField>
        <errorMessage>Para períodos já iniciados a Data Início não pode ser alterada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_DETALHE_VR02_ValidateEnd</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(endDate__c) &amp;&amp; Today() &gt;= PRIORVALUE(endDate__c))</errorConditionFormula>
        <errorDisplayField>endDate__c</errorDisplayField>
        <errorMessage>Para períodos finalizados a Data Fim não pode ser alterada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_DETALHE_VR03_Validate</fullName>
        <active>true</active>
        <errorConditionFormula>(startDate__c &gt; cotaMarket__r.endDate__c || startDate__c &lt; cotaMarket__r.startDate__c) || 
(endDate__c &gt; cotaMarket__r.endDate__c || endDate__c &lt; cotaMarket__r.startDate__c )</errorConditionFormula>
        <errorMessage>A &quot;Data Inicio&quot; e a &quot;Data Fim&quot; devem estar entre as &quot;Data Inicio&quot; e &quot;Data Fim&quot; do cabecalho (Cota New to Market).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_DETALHE_VR04_ValidateDates</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || (ISCHANGED(startDate__c) || ISCHANGED(endDate__c))) &amp;&amp; 
Today() &gt; startDate__c</errorConditionFormula>
        <errorMessage>A &quot;Data Inicio&quot; e &quot;Data Fim&quot; deve ser maior ou igual a data do dia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_DETALHE_VR05_ValidateClient</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(cliente__c) &amp;&amp;
(ISCHANGED(segmento__c) || 
ISCHANGED(regional__c) ||
ISCHANGED(sub_canal__c) || 
ISCHANGED(bandeira__c) || 
ISCHANGED(executivo__c)
)</errorConditionFormula>
        <errorMessage>Os campos da Hierarquia nao podem ser alterados pois o Cliente foi informado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>COTA_DETALHE_VR06_ValidateStartEnd</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || (ISCHANGED(startDate__c) || ISCHANGED(endDate__c))) 
&amp;&amp; 
startDate__c &gt; endDate__c</errorConditionFormula>
        <errorMessage>A Data Fim deve ser maior ou igual que a Data Inicio</errorMessage>
    </validationRules>
</CustomObject>